--- a/ScholarshipHub/Views/Student/ApplyToOrganization.cshtml
+++ b/ScholarshipHub/Views/Student/ApplyToOrganization.cshtml
@@ -1,4 +1,4 @@
-﻿@model ScholarshipHub.Models.ApplictionsToUniversity
+﻿@model ScholarshipHub.Models.ApplicationsToOrganization
 
 @{
     Layout = null;
@@ -9,7 +9,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>ApplyToUniversity</title>
+    <title>ApplyToOrganization</title>
 </head>
 <style>
     .topnav {
@@ -53,10 +53,13 @@
     {
         @Html.AntiForgeryToken()
 
+
         <input type="hidden" name="StudentId" value="@Session["studentId"]" />
-        <input type="hidden" name="UniversityOfferID" value="@Session["uniOfferId"]" />
+        <input type="hidden" name="UniversityOfferID" value="@Session["OrgOfferId"]" />
+
+
         <div class="form-horizontal">
-            <h4>ApplictionsToUniversity</h4>
+            <h4>ApplicationsToOrganization</h4>
             <hr />
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
@@ -77,7 +80,21 @@
                 </div>
             </div>
 
+            <div class="form-group">
+                @Html.LabelFor(model => model.AplicationStatus, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.AplicationStatus, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.AplicationStatus, "", new { @class = "text-danger" })
+                </div>
+            </div>
 
+            <div class="form-group">
+                @Html.LabelFor(model => model.ApplicationInformation, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.ApplicationInformation, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.ApplicationInformation, "", new { @class = "text-danger" })
+                </div>
+            </div>
 
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
