--- a/ScholarshipHub/Views/Student/Index.cshtml
+++ b/ScholarshipHub/Views/Student/Index.cshtml
@@ -48,7 +48,7 @@
         <a href="/Student/ApplicationsToUniversity">Application To University</a>
         <a href="/Student/ApplicationsToOrganization">Application To Organization</a>
         <a href="/Student">@Session["studentName"]</a>
-        <a href="">Log Out</a>
+        <a href="/logout">Log Out</a>
     </div>
     <center>
         <div>
